<resources>
    <string name="app_name">SignalCapturer</string>
    <string name="action_settings">Settings</string>
    <string name="show_details"><u>Show Details</u></string>
    <string name="hide_details"><u>Hide Details</u></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="intro_about">
        SignalCapturer surveys memory consumption patterns in real-world Android devices. This is
        part of a research project at the NSG Lab at LUMS under Dr. Zafar Ayyub Qazi, Dr. Ihsan
        Ayyub Qazi, and Dr. Zahaib Akhtar. It seeks to understand how users\' experience on mobile
        devices is affected by their memory sizes and processing capabilities.
    </string>

    <string name="intro_about2">
        Before collecting any piece of information, this application will take your
        explicit consent for it.
    </string>

    <string name="intro_about3">
        This application employs special care to keep the device user anonymous.
        Information which may disclose the identity of the device user such as the device model,
        its IMEI, the names of its hardware components etc., will not be collected.
    </string>

    <string name="form_intro">
        To better inform us about what might be causing the memory patterns we observe on this
        device, please fill out this short form:
    </string>
    <string name="qAge">What is the device user\'s age group?<span style="color:red"><strong> *</strong></span></string>
    <string name="qGender">What is the device user\'s gender?<span style="color:red"><strong> *</strong></span></string>
    <string name="q1">How often are games played on this device?<span style="color:red"><strong> *</strong></span></string>
    <string name="q2">How often are videos streamed on this device e.g. on YouTube, Facebook, Tiktok, or a web browser etc.?<span style="color:red"><strong> *</strong></span></string>
    <string name="q3">How often is music listened to on this device?<span style="color:red"><strong> *</strong></span></string>
    <string name="q4">How often does the device user multitask with more than one app?<span style="color:red"><strong> *</strong></span></string>
    <string name="q5">How often does the device user multitask with more than two apps?<span style="color:red"><strong> *</strong></span></string>
    <string name="q6">
        Any other memory/cpu intensive activity in your knowledge that is performed on this device?
        (e.g. video editing, BitTorrent, etc.)
    </string>
    <string name="requried_text">
        <span style="color:red"><strong>*</strong></span> Required
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="what_we_log">
        SignalCapturer collects\n

        \n

        the following once:\n
        \t  1. Device\'s Android version\n
        \t  2. Device manufacturer\'s name (e.g. Samsung)\n
        \t  3. Device\'s total memory\n
        \t  4. Number of CPU cores of the device\n
        \t  5. Whether this is a low RAM device\n
        \t  6. Device\'s low-memory threshold\n

        \n

        the following as they arrive:\n
        \t  1. Low-memory signals\n

        \n

        the following each second:\n
        \t  1. Amount of memory available\n
        \t  2. Number of running services (For Android &#60;8)\n
        \t  3. The last reported low-memory signal\n
        \t  4. Is the device in an interactive state?\n
        \t  5. Is the device battery low?\n
        \t  6. Is the device in power-saving mode?\n
        \t  7. Is audio being played?\n

        \n

        the following every 10 seconds:\n
        \t  1. Detailed memory statistics from \'/proc/meminfo\'
    </string>

    <string name="detailed_memory_stats_logged">
        Every 5 seconds we collect the following fields from the file \'/proc/meminfo\':\n
        \t  1. MemFree\n
        \t  2. Buffers\n
        \t  3. Cached\n
        \t  4. SwapCached\n
        \t  5. Active\n
        \t  6. Inactive\n
        \t  7. Active(anon)\n
        \t  8. Inactive(anon)\n
        \t  9. Active(file)\n
        \t  10. Inactive(file)\n
        \t  11. Unevictable\n
        \t  12. SwapTotal\n
        \t  13. SwapFree\n
        \t  14. Dirty\n
        \t  15. Writeback\n
        \t  16. AnonPages\n
        \t  17. Mapped\n
        \t  18. JunkVal\n
        \t  19. VmallocTotal\n
        \t  20. VmallocUsed\n
        \t  21. VmallocChunk
    </string>

    <string name="learn_more">To learn the exact API calls that are made to obtain this data, or to
        view this application\'s source code, visit nsg.lums.edu.pk/SignalCapturer
    </string>

    <string name="thank_you_note">You are playing a part in improving the user quality of experience
        on mobile devices!
    </string>

    <string name="instruction_thank_you_note">You may close this application now. SignalCapturer
        will remain running in the background.
    </string>

    <string name="instruction2_note">As long as this app runs, you will keep receiving a
        notification. If you ever spot that the notification is not present, please reopen this app
        to let it resume its activities.</string>

    <string name="learn_more_note">To recall what we are collecting, to see the application\'s
        source code, or for other information, visit nsg.lums.edu.pk/SignalCapturer
    </string>

    <string name="need_permission_msg">The application requires permission to read/write files so that it can
        temporarily store logs on the device until they are uploaded to the server.</string>

    <string name="see_privacy_policy"><u>See Privacy Policy</u></string>
    <string name="hide_privacy_policy"><u>Hide Privacy Policy</u></string>
    <string name="otherFAQs">Visit nsg.lums.edu.pk/SignalCapturer for other FAQs.</string>

</resources>
